k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: minecraft-hosting
  labels:
    name: minecraft-hosting
